# caffeine-ls

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md
.cargo/: config.toml
benches/: parallel_completion.rs  salsa_performance.rs
crates/base-db/: Cargo.toml
crates/caffeine-ls/: Cargo.toml
crates/caffeine-ls/src/: config.rs  flags.rs  from_proto.rs  global_state.rs  handlers.rs  indexing.rs  lib.rs  lsp.rs  main_loop.rs  project_model.rs
crates/caffeine-ls/src/handlers/: dispatch.rs  notification.rs  request.rs
crates/caffeine-ls/src/lsp/: backend.rs  capabilities.rs  convert.rs  diagnostics.rs  utils.rs  worker.rs
crates/caffeine-ls/src/lsp/worker/: jobs.rs
crates/caffeine-ls/tests/: lsp_snapshots.rs
crates/caffeine-ls/tests/snapshots/: lsp_snapshots__incremental_sync.snap  lsp_snapshots__incremental_sync.snap.new  lsp_snapshots__lexer_errors.snap  lsp_snapshots__parser_recovery_missing_semicolon.snap  lsp_snapshots__sanity_checks.snap  lsp_snapshots__unclosed_block.snap
crates/hir/: Cargo.toml
crates/ide/: Cargo.toml
crates/ide-db/: Cargo.toml
crates/ide-db/src/: handlers.rs  lib.rs  symbol.rs
crates/ide-db/src/handlers/: jar.rs  jimage.rs
crates/ide/src/: delta.rs  lib.rs
crates/java-syntax/: Cargo.toml
crates/java-syntax/src/: kinds.rs  lexer.rs  lib.rs  parser.rs  reader.rs  syntax_kind.rs
crates/java-syntax/src/lexer/: token.rs
crates/java-syntax/src/parser/: grammar.rs  marker.rs  reader.rs  sink.rs
crates/java-syntax/src/parser/grammar/: clauses.rs  compilation_unit.rs  decl.rs  error_recover.rs  expr.rs  member.rs  modifiers.rs  names.rs  stmt.rs  types.rs
crates/java-syntax/src/snapshots/: java_syntax__lexer__tests__operators.snap
crates/java-syntax/tests/: common.rs  lexer_snapshots.rs  parser_events.rs  parser_snapshots.rs
crates/java-syntax/tests/snapshots/: event_snapshots__event_class_with_field.snap  event_snapshots__event_class_with_method.snap  event_snapshots__event_empty_class.snap  event_snapshots__event_empty_record.snap  event_snapshots__event_enum_with_members.snap  event_snapshots__event_interface_with_default_method.snap  event_snapshots__event_multiline_class.snap  event_snapshots__event_nested_wildcard_type_argument.snap  event_snapshots__event_recovery_missing_member_name.snap  event_snapshots__event_type_parameters_class.snap  lexer_snapshots__lex_bom.snap  lexer_snapshots__lex_boolean_and_null_literals.snap  lexer_snapshots__lex_char_literals.snap  lexer_snapshots__lex_comment_termination_cr.snap  lexer_snapshots__lex_comment_termination_crlf.snap  lexer_snapshots__lex_comment_termination_unicode_line_break.snap  lexer_snapshots__lex_eof_sub_character.snap  lexer_snapshots__lex_error_illegal_text_block_open.snap  lexer_snapshots__lex_error_invalid_char_empty.snap  lexer_snapshots__lex_error_invalid_char_multiple.snap  lexer_snapshots__lex_error_invalid_number_binary_digit.snap  lexer_snapshots__lex_error_invalid_number_fraction_underscore.snap  lexer_snapshots__lex_error_invalid_number_octal_like.snap  lexer_snapshots__lex_error_invalid_underscore_exponent_1.snap  lexer_snapshots__lex_error_invalid_underscore_exponent_2.snap  lexer_snapshots__lex_error_invalid_underscore_float_1.snap  lexer_snapshots__lex_error_invalid_underscore_float_2.snap  lexer_snapshots__lex_error_invalid_underscore_integer.snap  lexer_snapshots__lex_error_invalid_unicode_escape_non_hex.snap  lexer_snapshots__lex_error_invalid_unicode_escape_short.snap  lexer_snapshots__lex_error_unicode_char_non_bmp.snap  lexer_snapshots__lex_error_unicode_escape_in_string_quote.snap  lexer_snapshots__lex_error_unterminated_comment.snap  lexer_snapshots__lex_error_unterminated_string_eof.snap  lexer_snapshots__lex_error_unterminated_string_newline.snap  lexer_snapshots__lex_escape_sequence_s_string.snap  lexer_snapshots__lex_floating_point_literals_decimal.snap  lexer_snapshots__lex_floating_point_literals_hex.snap  lexer_snapshots__lex_integer_literals_binary.snap  lexer_snapshots__lex_integer_literals_decimal.snap  (+166 more)
crates/lsp-test/: Cargo.toml
crates/project-model/: Cargo.toml
crates/project-model/src/: build_system.rs  eclipse.rs  gradle.rs  idea.rs  lib.rs  maven.rs  workspace.rs
crates/project-model/src/eclipse/: model.rs  runner.rs
crates/project-model/src/gradle/: export.init.gradle  export.legacy.init.gradle  export.modern.init.gradle  model.rs  runner.rs  script.rs
crates/project-model/src/idea/: model.rs  runner.rs
crates/project-model/src/maven/: export.mvn.groovy  model.rs  runner.rs  script.rs
crates/semantics/: Cargo.toml
crates/vfs/: Cargo.toml
docs/: jls-implementation-status.md  lombok-implementation.md  project-overview.md  semantic-pipeline.md
editors/code/: eslint.config.mjs  package.json
src/: build_integration.rs  decompiler.rs  index.rs  language.rs  lib.rs  logging.rs  lsp.rs  main.rs  request_metrics.rs  salsa_queries.rs  semantic.rs  workspace.rs
src/build_integration/: detection.rs  maven.rs  reload.rs
src/completion/: context.rs  engine.rs  import_completion.rs  import_utils.rs  parser.rs  scorer.rs  type_resolver.rs
src/decompiler/: cache.rs
src/index/: archive_stub.rs  artifact_reader.rs  bucket.rs  cache.rs  codebase.rs  jdk.rs  module_index.rs  scope.rs  scope_snapshot.rs  source.rs  store.rs  view.rs  workspace_index.rs
src/jvm/: descriptor.rs
src/language/: java.rs  kotlin.rs  salsa_context.rs  ts_utils.rs
src/lsp/: config.rs  request_context.rs  server.rs
src/salsa_queries/: completion.rs  context.rs  (+6 more)
tests/: decompiler_cancellation.rs  lsp_integration.rs  stack_overflow_regression.rs
xtask/: Cargo.toml
xtask/src/: args.rs  development.rs  main.rs  tree.rs
(+123 files in other folders)
