[package]
name = "xtask"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
which = "8.0.4"
xshell = "0.2.7"

anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
indicatif = { workspace = true }
java-syntax = { workspace = true }
rayon = { workspace = true }
walkdir = { workspace = true }
