[package]
name = "ide-db"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
parking_lot.workspace = true
jimage-rs.workspace = true
rowan.workspace = true
dashmap.workspace = true
zip.workspace = true
vfs.workspace = true
base-db.workspace = true
hir.workspace = true
salsa.workspace = true
triomphe.workspace = true
