[package]
name = "ide-db"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
syntax.workspace = true

dashmap.workspace = true
heed = "0.22.1"
lasso.workspace = true
lru.workspace = true
parking_lot.workspace = true
postcard = { workspace = true, features = ["alloc"] }
project-model.workspace = true
serde.workspace = true
smol_str.workspace = true
triomphe.workspace = true
vfs.workspace = true
