[package]
name = "ide"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
dashmap.workspace = true
ide-db.workspace = true
parking_lot.workspace = true
lasso.workspace = true
project-model.workspace = true
rowan.workspace = true
rustc-hash.workspace = true
semantics.workspace = true
syntax.workspace = true
triomphe.workspace = true
vfs.workspace = true

[dev-dependencies]
tempfile = "3"
