[package]
name = "java-syntax"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
drop_bomb = "0.1.5"
strum = { version = "0.28", features = ["derive"] }
unicode_categories = { workspace = true }
rowan = { workspace = true }
smallvec = { workspace = true }
stacksafe = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
indoc = { workspace = true }
