[package]
name = "project-model"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
ide-db.workspace = true
vfs.workspace = true

anyhow.workspace = true
rustc-hash.workspace = true
serde.workspace = true
serde_json.workspace = true
smol_str.workspace = true
tempfile = "3.27.0"
tracing.workspace = true
triomphe.workspace = true
